# python_ST3215

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  LICENSE  QUICKSTART.md  README.md  TECHNICAL_COMPARISON.md
Documentation/: ARCHITECTURE.md  CODE.md  COMMUNICATION.md  DESIGN.md  ENGINEERING.md  INSTALLATION.md  MATH.md  README.md  SYNTAX.md
_codeql_build_dir/: ST3215Config.cmake
_codeql_build_dir/examples/: list_servos  move_servo  ping_servo  read_telemetry
cmake/: ST3215Config.cmake.in
examples/: CMakeLists.txt  list_servos.cpp  move_servo.cpp  ping_servo.cpp  read_telemetry.cpp
include/st3215/: group_sync_read.h  group_sync_write.h  port_handler.h  protocol_packet_handler.h  st3215.h  values.h
src/: group_sync_read.cpp  group_sync_write.cpp  port_handler.cpp  protocol_packet_handler.cpp  st3215.cpp
